examples/test/testpolicy19068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19068
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key20: value39
      key36: value37
      key38: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value35
          key6: value6
      podSelector:
        matchLabels:
          key21: value26
